syntax = "proto3";

option go_package = "genproto/metro_service/";

package metro_service;



service Metro_service {
    rpc Cards(Card) returns (Void){}
    rpc Stations(Station) returns (Void){}
    rpc Terminals(Terminal) returns (Void) {}
    rpc Transactions(Transaction) returns (Void) {}
}

message Void{}

message Card {
    string id = 1;
    string name = 2;
    string userId = 3;
}

message Station {
    string id = 1;
    string name = 2;
}

message Terminal {
    string id = 1;
    string stationId = 2;
}

message Transaction {
    string id = 1;
    string cardId = 2;
    string amount = 3;
    string terminalId = 4;
}